Update Automator Services.

--- a/Automator Services/Extract EPUB.workflow/Contents/Info.plist
+++ b/Automator Services/Extract EPUB.workflow/Contents/Info.plist
@@ -19,7 +19,7 @@
 			</dict>
 			<key>NSSendFileTypes</key>
 			<array>
-				<string>public.content</string>
+				<string>org.idpf.epub-container</string>
 			</array>
 		</dict>
 	</array>
